# wpr_simulation2

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: behavior_tree.xml  nav2_params.yaml  wpb_home_controller.yaml
demo_cmakelists/: 10_pc_data.txt  10_pc_objects.txt  11_grab_object.txt  11_mani_ctrl.txt  12_fetch.txt  12_home.txt  3_launch.txt  3_my_node.txt  3_publisher_node.txt  3_subscriber_node.txt  4_vel_node.txt  5_lidar_behavior.txt  5_lidar_data.txt  6_imu_behavior.txt  6_imu_data.txt  7_slam.txt  8_nav.txt  8_waypoint_navigation.txt  9_cv_face_detect.txt  9_cv_follow.txt  9_cv_hsv.txt  9_cv_image.txt
demo_cpp/: 10_mani_ctrl.cpp  10_mani_ctrl_class.cpp  10_pc_data.cpp  10_pc_objects.cpp  10_pc_objects_class.cpp  11_grab_object.cpp  11_mani_ctrl.cpp  11_mani_ctrl_class.cpp  11_pointcloud_data.cpp  11_pointcloud_objects.cpp  11_pointcloud_objects_class.cpp  12_fetch.cpp  3_my_node.cpp  3_publisher_class.cpp  3_publisher_node.cpp  3_subscriber_class.cpp  3_subscriber_node.cpp  4_velocity_command.cpp  5_lidar_behavior.cpp  5_lidar_behavior_class.cpp  5_lidar_data.cpp  6_imu_behavior.cpp  6_imu_data.cpp  6_imu_data_class.cpp  8_waypoint_navigation.cpp  8_waypoint_navigation_class.cpp  9_cv_face_detect.cpp  9_cv_follow.cpp  9_cv_hsv.cpp  9_cv_image.cpp  demo_mani_ctrl.cpp  demo_mani_ctrl_class.cpp  demo_nav2_client.cpp  demo_nav2_client_class.cpp  mani_test_node.cpp
demo_launch/: 12_home.launch.py  3_pub_sub.launch.py  3_pub_sub.launch.xml  3_pub_sub.launch.yaml  7_slam.launch.py  8_nav.launch.py  8_waypoint_nav.launch.py
demo_package/: 10_pc_data.xml  11_grab_object.xml  11_mani_ctrl.xml  12_fetch.xml  3_my_node.xml  3_topic.xml  4_vel_node.xml  5_lidar_behavior.xml  5_lidar_data.xml  6_imu_behavior.xml  6_imu_data.xml  8_waypoint_navigation.xml  9_cv_face_detect.xml  9_cv_follow.xml
exercises/: 10_pc_data_class.cpp  10_pc_file..cpp  10_pc_objects_class.cpp  11_grab_object_class.cpp  4_velocity_command_class.cpp  5_lidar_data_class.cpp  6_imu_behavior_class.cpp  7_slam_all.launch.py  7_slam_resolution.launch.py  8_navi_all_waypoints.cpp  9_cv_face_detect_class.cpp  9_cv_face_follow.cpp  9_cv_follow_class.cpp  9_cv_hsv_class.cpp  9_cv_image_class.cpp  9_cv_save_file.cpp
launch/: demo_mani_ctrl.launch.py  map_tools.launch.py  navigation.launch.py  robocup_home.launch.py  robocup_home_mani.launch.py  slam.launch.py  spawn_objects.launch.py  spawn_persons.launch.py  spawn_wpb.launch.py  spawn_wpb_head_up.launch.py  spawn_wpb_lidar.launch.py  spawn_wpb_mani.launch.py  world.launch.py  wpb_balls.launch.py  wpb_face.launch.py  wpb_mani.launch.py  wpb_objects.launch.py  wpb_scene_1.launch.py  wpb_simple.launch.py  wpb_table.launch.py
meshes/man_1/: man_1.dae
meshes/man_2/: man_2.dae
meshes/woman/: woman.dae
models/: bed.model  bookshelft.model  chair.model  cupboard.model  kai_standing.model  man_1.model  man_2.model  sofa.model  table.model  tea_table.model  woman.model  wpb_home.model  wpb_home_head_up.model  wpb_home_lidar.model  wpb_home_mani.model  wpr1.model
models/balls/: blue_ball.model  green_ball.model  orange_ball.model  red_ball.model
models/bottles/: green_bottle.model  red_bottle.model
rviz/: fetch.rviz  navi.rviz  navi_3d.rviz  objects.rviz  pointcloud.rviz  sensor.rviz  slam.rviz
scripts/: install_dep_face.sh  install_for_humble.sh
src/: ball_random_move.cpp  face_detector.py  grab_object_sim.cpp  keyboard_vel_cmd.cpp  objects_publisher.cpp  wpb_home_mani_sim.cpp
worlds/: table.world  wpb_pose.world
